--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       <div class="container">
         <div class="content-all">qeq</div>
         <div class="news">qưeqw</div>
+        <div>qưdq</div>
       </div>
       <footer>
         <div class="footer-top">
