--- a/index.html
+++ b/index.html
@@ -43,9 +43,259 @@
       </header>
       <!-- END HEADER -->
       <div class="container">
-        <div class="content-all">qeq</div>
-        <div class="news">qưeqw</div>
-        <div>qưdq</div>
+        <div class="content-left">
+          <div class="content-banner">
+            <img
+              src="https://photo-baomoi.zadn.vn/w700_r16x9/2021_03_17_293_38236545/408e14a121e3c8bd91f2.jpg"
+              alt=""
+            />
+          </div>
+          <div class="content-info">
+            <a href=""
+              ><h4>Thường trực Chính phủ họp về phòng, chống COVID-19</h4></a
+            >
+          </div>
+          <div class="content-story">
+            <ul>
+              <li>
+                <a href="">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/d1c2f8ad25eeccb095ff.png"
+                    alt=""
+                  />
+                </a>
+              </li>
+              <li>1 giờ</li>
+              <li>
+                <a href="">4 liên quan</a>
+              </li>
+            </ul>
+          </div>
+          <div class="content-tintuc-lienquan">
+            <div class="tintuc-lienquan">
+              <div class="tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w200_r3x2/2021_03_17_15_38234384/f02337600222eb7cb233.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="tintuc-noidung">
+                <a href=""><h4>Từ ngày 1- 4, sử dụng mẫu thẻ BHYT mới</h4></a>
+              </div>
+            </div>
+            <div class="tintuc-lienquan">
+              <div class="tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w200_r3x2/2021_03_17_23_38235580/49d568825dc0b49eedd1.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="tintuc-noidung">
+                <a href=""><h4>Xả súng liên tiếp ở Mỹ, 7 người chết</h4></a>
+              </div>
+            </div>
+            <div class="tintuc-lienquan">
+              <div class="tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w200_r3x2/2021_03_17_119_38234543/ef8e0508814b6815315a.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="tintuc-noidung">
+                <a href=""
+                  ><h4>
+                    Tình báo Mỹ tố Nga tìm cách tác động bầu cử tổng thống năm
+                    2020
+                  </h4></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="content-right">
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_01_21_293_37708582/575fbce672a59bfbc2b4.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>
+                    Chủ tịch Hồ Chí Minh: Đoàn kết là sức mạnh của Đảng
+                  </h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/d1c2f8ad25eeccb095ff.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_03_17_240_38242018/3fa8ce0cf74e1e10475f.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>Gắp con đỉa dài 5cm 'cư ngụ' trong mũi bệnh nhân</h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/cd107f7ea23d4b63122c.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_03_17_14_38242006/4d882c9f19ddf083a9cc.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>
+                    Điện Biên phá hai chuyên án ma túy lớn, thu giữ 9 bánh
+                    heroin
+                  </h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/4e023e6de32e0a70533f.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_03_17_14_38241987/9f1bd60ce34e0a10535f.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>
+                    Truy tặng Huân chương, trao bằng 'Tổ quốc ghi công' chủ tịch
+                    xã quên mình vì dân
+                  </h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/4e023e6de32e0a70533f.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_03_17_5_38241992/8467d970ec32056c5c23.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>
+                    Thứ trưởng Nguyễn Văn Sơn làm việc tại Công an huyện Cẩm
+                    Thủy, Thanh Hóa
+                  </h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/3a2a57458a0663583a17.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_03_17_294_38242014/2e215b366e74872ade65.jpg.webp"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>
+                    Người mẹ mất con trai duy nhất do hội chứng COVID-19 hiếm
+                    gặp
+                  </h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/9bbe18d0c5932ccd7582.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="story-all">
+            <div class="story-tintuc">
+              <div class="story-tintuc-banner">
+                <img
+                  src="https://photo-baomoi.zadn.vn/w100_r1x1/2021_03_17_119_38241930/8d0127161254fb0aa245.jpg.webp"
+                  alt=""
+                />
+              </div>
+              <div class="story-tintuc-noidung">
+                <a href=""
+                  ><h4>Dân Texas được xóa nợ hơn 29 triệu USD tiền điện</h4></a
+                >
+                <div class="story-lq">
+                  <a href=""
+                    ><img
+                      src="https://photo-baomoi.zadn.vn/d59db7f26ab183efdaa0.png"
+                      alt=""
+                  /></a>
+                  <a href="">2 liên quan</a>
+                </div>
+              </div>
+            </div>
+            <hr / style="margin: 15px 0;">
+          </div>
+        </div>
       </div>
       <footer>
         <div class="footer-top">
