--- a/index.html
+++ b/index.html
@@ -111,6 +111,220 @@
               </div>
             </div>
           </div>
+          <div class="story-tintuc-left">
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/w300_r3x2/2021_03_18_8_38255331/734cdd27eb65023b5b74.jpg.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Đề xuất phát triển đô thị mới tại quy hoạch phân khu đô
+                        thị sông Hồng
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/a05eef313272db2c8263.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/w300_r3x2/2021_03_18_8_38255294/e640d828ee6a07345e7b.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Moody's tăng triển vọng tín nhiệm của Việt Nam hai bậc
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/a05eef313272db2c8263.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/w300_r3x2/2021_03_18_119_38253434/3b9e8601b043591d0052.jpg.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Sẽ xây cao tốc TP.HCM - Thủ Dầu Một - Chơn Thành
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/d59db7f26ab183efdaa0.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/w300_r3x2/2021_03_18_119_38254112/cd94836e482da173f83c.jpg.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Bệnh nhân Covid-19 mới xuất viện bị phạt hơn 17 triệu
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/d59db7f26ab183efdaa0.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-atm-baomoi.zadn.vn/w300_r3x2/adtima-media.zadn.vn/2021/03/86c24f26-c5a7-493c-ab0f-a04d7d13e8b9.png"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Bọc lại nội thất, ghế da một cách chuyên nghiệp, đẹp mê
+                        ly. Thiết kế cá nhân hóa
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/a05eef313272db2c8263.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/w300_r3x2/2021_03_18_345_38255859/0c2c234a1508fc56a519.jpg.webp"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Giảm thủ tục, tạo thuận lợi cho người dân, doanh nghiệp
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/a05eef313272db2c8263.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="tintuc-row-left">
+              <hr style="width: 97%; margin: 20px 230px 0 0" />
+              <div class="news-col">
+                <div class="banner-news-left">
+                  <img
+                    src="https://photo-baomoi.zadn.vn/w600_r3x2/2021_03_18_15_38255718/06769d11ab53420d1b42.jpg"
+                    alt=""
+                  />
+                </div>
+                <div class="news-left-thongtin">
+                  <div class="thongtin-text">
+                    <a href=""
+                      ><h4>
+                        Lời kể của nữ sinh lớp 6 bị đánh dã man trong lô cao su
+                      </h4></a
+                    >
+                  </div>
+                  <div class="thongtin-lq">
+                    <a href="">
+                      <img
+                        src="https://photo-baomoi.zadn.vn/0b89da8919caf094a9db.png"
+                        alt=""
+                      />
+                    </a>
+                    <span>1 giờ</span>
+                    <a href=""><span>4 liên quan</span></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="content-right">
           <div class="story-all">
@@ -293,7 +507,25 @@
                 </div>
               </div>
             </div>
-            <hr / style="margin: 15px 0;">
+          </div>
+          <div class="banner-lq-news">
+            <div class="story-news-right">
+              <img src="./image/Screenshot.png" alt="" />
+            </div>
+            <div class="story-news-right">
+              <img
+                class="banner-news-right"
+                src="https://baomoi-static.zadn.vn/events/bluezone_3_min.jpg"
+                alt=""
+              />
+            </div>
+            <div class="story-news-right">
+              <img
+                class="banner-news-right"
+                src="https://baomoi-static.zadn.vn/events/banner_hcm_02-min.png"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </div>
@@ -304,6 +536,114 @@
           </div>
           <div class="footer-search">
             <input type="text" placeholder="Nhập nội dung tìm kiếm" />
+          </div>
+        </div>
+        <div class="footer__tagcloud">
+          <a href="/tag/Nhật-Bản.epi"> Nhật Bản </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vaccine-COVID_19.epi"> Vaccine COVID-19 </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Hội-đồng-nhân-dân.epi"> Hội đồng nhân dân </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vắc_xin.epi"> Vắc-xin </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Việt-nam.epi"> Việt nam </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Đại-biểu-quốc-hội.epi"> Đại biểu quốc hội </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Europa-League.epi"> Europa League </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Trái-phép.epi"> Trái phép </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Thanh-Hóa.epi"> Thanh Hóa </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Hà-Nội.epi"> Hà Nội </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/COVID_19.epi"> COVID-19 </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Phát-triển-kinh-tế.epi"> Phát triển kinh tế </a
+          >&nbsp;&#8208;&nbsp; <a href="/tag/F1.epi"> F1 </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Bất-động-sản.epi"> Bất động sản </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Champions-league.epi"> Champions league </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Trung-Quốc.epi"> Trung Quốc </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Hải-Phòng.epi"> Hải Phòng </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vaccine-AstraZeneca.epi"> Vaccine AstraZeneca </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Chelsea.epi"> Chelsea </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Pogba.epi"> Pogba </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vaccine-ngừa-Covid_19.epi"> Vaccine ngừa Covid-19 </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/AC-Milan.epi"> AC Milan </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Video-clip.epi"> Video clip </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Phiên-giao-dịch.epi"> Phiên giao dịch </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Ấn-Độ.epi"> Ấn Độ </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Gắn-chip.epi"> Gắn chip </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Đà-Nẵng.epi"> Đà Nẵng </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Bình-Dương.epi"> Bình Dương </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Antony-Blinken.epi"> Antony Blinken </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Hải-Dương.epi"> Hải Dương </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Washington.epi"> Washington </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Mạng-xã-hội.epi"> Mạng xã hội </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Việt.epi"> Việt </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Cục-dự-trữ-liên-bang.epi"> Cục dự trữ liên bang </a
+          >&nbsp;&#8208;&nbsp; <a href="/tag/Mỹ.epi"> Mỹ </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Ninh-Thuận.epi"> Ninh Thuận </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Video.epi"> Video </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Nghệ-An.epi"> Nghệ An </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Quảng-Ninh.epi"> Quảng Ninh </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vn_index.epi"> Vn-index </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Cải-cách-hành-chính.epi"> Cải cách hành chính </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vi_rút.epi"> Vi-rút </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Châu-âu.epi"> Châu âu </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Bắc-kinh.epi"> Bắc kinh </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Nguyễn-Xuân-Phúc.epi"> Nguyễn Xuân Phúc </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/SARS_COV_2.epi"> SARS-COV-2 </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Online.epi"> Online </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Kim-Đính.epi"> Kim Đính </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Lượt-về.epi"> Lượt về </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/V_League-2021.epi"> V-League 2021 </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vacxin.epi"> Vacxin </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Vaccine-phòng-COVID_19.epi"> Vaccine phòng COVID-19 </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Nam-Định.epi"> Nam Định </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Manchester-United.epi"> Manchester United </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Thành-phố-hồ-chí-minh.epi"> Thành phố hồ chí minh </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/Tổng-thống-Mỹ.epi"> Tổng thống Mỹ </a
+          >&nbsp;&#8208;&nbsp;
+          <a href="/tag/ASTRAZENECA.epi"> ASTRAZENECA </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Hà-Tĩnh.epi"> Hà Tĩnh </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Bộ-y-tế.epi"> Bộ y tế </a>&nbsp;&#8208;&nbsp;
+          <a href="/tag/Joe-Biden.epi"> Joe Biden </a>
+        </div>
+        <hr style="margin: 30px 250px" />
+        <div class="footer-middle">
+          <div class="footer-left">
+            <h4>LIÊN HỆ</h4>
+            <ul>
+              <li><a href="">Giới thiệu</a></li>
+              <li><a href="">Điều khoản sử dụng</a></li>
+              <li><a href="">Quảng cáo</a></li>
+            </ul>
+          </div>
+          <div class="footer-right">
+            <p>
+              Giấy phép số 1818/GP-TTĐT do Sở Thông tin và Truyền thông Hà Nội
+              cấp ngày 05/05/2017
+            </p>
+            <p>
+              Đơn vị chủ quản: Công ty Cổ phần Công nghệ EPI * Chịu trách nhiệm:
+              Nguyễn Thanh Tùng
+            </p>
+            <p>
+              Địa chỉ: Tầng 5, Tòa nhà Báo Sinh Viên VN, D29 Phạm Văn Bạch, Yên
+              Hòa, Cầu Giấy, Hà Nội
+            </p>
+            <p>
+              Tel: (024) 3-212-3232, số máy lẻ 6666. contact.baomoi@epi.com.vn
+            </p>
+            <p>BÁO MỚI tổng hợp và sắp xếp các thông tin tự động</p>
+            <p>bởi chương trình máy tính</p>
           </div>
         </div>
       </footer>
