--- a/Training Js/test Js/index.html
+++ b/Training Js/test Js/index.html
@@ -23,7 +23,7 @@
         <div class="pw">
           <label for="psw"><b>Password</b></label>
           <input
-            type="password"
+            type="text"
             placeholder="Mời nhập Password"
             name="psw"
             id="password"
