validate form login

--- a/Training Js/git_github/index.html
+++ b/Training Js/git_github/index.html
@@ -1,1 +1,2 @@
-touch: tạo file ls: list danh sách file
+touch: tạo file ls: list danh sách file git git remote -v: xem link github repo
+mkdir: tạo file
