check login thanh cong

--- a/JavaScript nâng cao/test/index.html
+++ b/JavaScript nâng cao/test/index.html
@@ -7,13 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script>
-      if (typeof Storage !== "undefined") {
-        var domain = "freetuts.net";
-        localStorage.setItem("domain", domain);
-      } else {
-        document.write("Trình duyệt của bạn không hỗ trợ local storage");
-      }
-    </script>
+    <div id="hello"></div>
+    <script src="main.js"></script>
   </body>
 </html>
