--- a/Jquery/index.html
+++ b/Jquery/index.html
@@ -10,8 +10,14 @@
 </head>
 
 <body>
-    <button id="btn1">Ẩn</button>
-    <h1>Hello</h1>
+    <button id="btn">Click</button>
+
+    <div id="div1" style="width:80px;height:80px;background-color:red;"></div>
+    <br>
+    <div id="div2" style="width:80px;height:80px;background-color:green;"></div>
+    <br>
+    <div id="div3" style="width:80px;height:80px;background-color:blue;"></div>
+
     <script src="main.js"></script>
 </body>
 
